added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first ever github repo </title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    
+    <div>
+
+        <h3> my first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt assumenda inventore nobis mollitia voluptatem laudantium esse laborum eaque dolor! Obcaecati similique porro enim quos consequuntur officiis labore nobis et voluptatibus.</p>
+    </div>
 </body>
 </html>
