--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
         <h3> my first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt assumenda inventore nobis mollitia voluptatem laudantium esse laborum eaque dolor! Obcaecati similique porro enim quos consequuntur officiis labore nobis et voluptatibus.</p>
     </div>
+    <div>
+
+        <h3> my second website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt assumenda inventore nobis mollitia voluptatem laudantium esse laborum eaque dolor! Obcaecati similique porro enim quos consequuntur officiis labore nobis et voluptatibus.</p>
+    </div>
+    <div>
+
+        <h3> my third website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt assumenda inventore nobis mollitia voluptatem laudantium esse laborum eaque dolor! Obcaecati similique porro enim quos consequuntur officiis labore nobis et voluptatibus.</p>
+    </div>
 </body>
 </html>
