--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
         <h3> my third website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt assumenda inventore nobis mollitia voluptatem laudantium esse laborum eaque dolor! Obcaecati similique porro enim quos consequuntur officiis labore nobis et voluptatibus.</p>
     </div>
+    <div>
+
+        <h3>How AI won the Noble Prize</h3>
+        <img src="images/ai.jpg" alt="">
+    </div>
 </body>
 </html>
